// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BonusPointsAvailabilityVanilla should render correctly available_today 1`] = `
<View>
  <CollapsibleContainer
    arrowPos={null}
    body={
      <ForwardRef
        spacingStyles="padding-top-SM"
      >
        <React.Fragment>
          <ForwardRef>
            <ForwardRef
              accessibilityText=""
              data-locator="msgtextinbold"
              dataLocator=""
              fontSize="fs14"
              fontWeight="extrabold"
              margin={null}
              mobileFontFamily="secondary"
              numberOfLines={null}
              text="lbl_bonusPoints_applyAnyDay"
              textAlign="center"
              textDecoration={null}
            />
          </ForwardRef>
          <ForwardRef>
            <ForwardRef
              accessibilityText=""
              data-locator="infomsg"
              dataLocator=""
              fontSize="fs12"
              fontWeight="regular"
              margin={null}
              mobileFontFamily="secondary"
              numberOfLines={null}
              text="lbl_bonusPoints_msg"
              textAlign="center"
              textDecoration={null}
            />
          </ForwardRef>
        </React.Fragment>
        <BonusPointsAvailability
          bonusDayAvailableToday={0}
          bonusPoints={
            Array [
              Object {
                "buttonText": "lbl_bonusPoints_ctaApply",
                "dataLocator": "availabletodaybtn",
                "disabled": false,
              },
            ]
          }
          className="availability-msg"
          enableApplyCta={false}
          getBonusDaysData={[Function]}
          isPlcc={false}
          labels={
            Object {
              "placeRewards": Object {
                "lbl_bonus_points_apply_any_day": "",
                "lbl_bonus_points_msg": "",
                "lbl_common_details": "",
                "lbl_place_rewards_bonus": "",
                "lbl_place_rewards_day": "",
                "lbl_place_rewards_points": "",
              },
            }
          }
          orderDetails={Object {}}
        />
        <ForwardRef
          accessibilityLabel=""
          anchorVariation="primary"
          className="details-link"
          colorName={null}
          customStyle={Object {}}
          dataLocator="detailslink"
          fontSizeVariation="medium"
          href="#"
          locator=""
          onPress={[Function]}
          text="lbl_bonusPoints_details"
          underline={true}
          visible={false}
        />
      </ForwardRef>
    }
    defaultOpen={false}
    getExpandedState={null}
    header={
      <ForwardRef
        className="elem-mb-SM"
        data-locator="bonuspointsdayhdr"
      >
        <ForwardRef>
          <ForwardRef
            accessibilityText=""
            color="orange.800"
            component="span"
            dataLocator=""
            fontSize="fs16"
            fontWeight="extrabold"
            margin={null}
            mobileFontFamily="primary"
            numberOfLines={null}
            text="lbl_bonusPoints_placeRewardsBonus"
            textDecoration={null}
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            accessibilityText=""
            color="primary.main"
            component="span"
            dataLocator=""
            fontSize="fs16"
            fontWeight="extrabold"
            margin={null}
            mobileFontFamily="primary"
            numberOfLines={null}
            text="lbl_bonusPoints_placeRewardsPoints"
            textDecoration={null}
          />
        </ForwardRef>
        <ForwardRef
          accessibilityText=""
          color="pink.500"
          component="span"
          dataLocator=""
          fontSize="fs16"
          fontWeight="extrabold"
          margin={null}
          mobileFontFamily="primary"
          numberOfLines={null}
          text="lbl_bonusPoints_placeRewardsDay"
          textDecoration={null}
        />
      </ForwardRef>
    }
    height={null}
    iconLocator="arrowicon"
    index={null}
  />
</View>
`;

exports[`BonusPointsAvailabilityVanilla should render correctly with applied to bag bonus point days 1`] = `
<View>
  <CollapsibleContainer
    arrowPos={null}
    body={
      <ForwardRef
        spacingStyles="padding-top-SM"
      >
        <React.Fragment>
          <ForwardRef>
            <ForwardRef
              accessibilityText=""
              data-locator="msgtextinbold"
              dataLocator=""
              fontSize="fs14"
              fontWeight="extrabold"
              margin={null}
              mobileFontFamily="secondary"
              numberOfLines={null}
              text="lbl_bonusPoints_applyAnyDay"
              textAlign="center"
              textDecoration={null}
            />
          </ForwardRef>
          <ForwardRef>
            <ForwardRef
              accessibilityText=""
              data-locator="infomsg"
              dataLocator=""
              fontSize="fs12"
              fontWeight="regular"
              margin={null}
              mobileFontFamily="secondary"
              numberOfLines={null}
              text="lbl_bonusPoints_msg"
              textAlign="center"
              textDecoration={null}
            />
          </ForwardRef>
        </React.Fragment>
        <BonusPointsAvailability
          bonusDayAvailableToday={1}
          bonusPoints={
            Array [
              Object {
                "buttonText": "lbl_bonusPoints_usedOn ",
                "dataLocator": "usedonbtn",
                "disabled": true,
              },
              Object {
                "buttonText": "lbl_bonusPoints_ctaApplied",
                "dataLocator": "appliedtoorderbtn",
                "disabled": false,
              },
              Object {
                "buttonText": "lbl_bonusPoints_futureUse",
                "dataLocator": "availableforfutureusebtn",
                "disabled": true,
              },
            ]
          }
          className="availability-msg"
          enableApplyCta={false}
          getBonusDaysData={[Function]}
          isPlcc={false}
          labels={
            Object {
              "placeRewards": Object {
                "lbl_bonus_points_apply_any_day": "",
                "lbl_bonus_points_msg": "",
                "lbl_common_details": "",
                "lbl_place_rewards_bonus": "",
                "lbl_place_rewards_day": "",
                "lbl_place_rewards_points": "",
              },
            }
          }
          orderDetails={Object {}}
        />
        <ForwardRef
          accessibilityLabel=""
          anchorVariation="primary"
          className="details-link"
          colorName={null}
          customStyle={Object {}}
          dataLocator="detailslink"
          fontSizeVariation="medium"
          href="#"
          locator=""
          onPress={[Function]}
          text="lbl_bonusPoints_details"
          underline={true}
          visible={false}
        />
      </ForwardRef>
    }
    defaultOpen={false}
    getExpandedState={null}
    header={
      <ForwardRef
        className="elem-mb-SM"
        data-locator="bonuspointsdayhdr"
      >
        <ForwardRef>
          <ForwardRef
            accessibilityText=""
            color="orange.800"
            component="span"
            dataLocator=""
            fontSize="fs16"
            fontWeight="extrabold"
            margin={null}
            mobileFontFamily="primary"
            numberOfLines={null}
            text="lbl_bonusPoints_placeRewardsBonus"
            textDecoration={null}
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            accessibilityText=""
            color="primary.main"
            component="span"
            dataLocator=""
            fontSize="fs16"
            fontWeight="extrabold"
            margin={null}
            mobileFontFamily="primary"
            numberOfLines={null}
            text="lbl_bonusPoints_placeRewardsPoints"
            textDecoration={null}
          />
        </ForwardRef>
        <ForwardRef
          accessibilityText=""
          color="pink.500"
          component="span"
          dataLocator=""
          fontSize="fs16"
          fontWeight="extrabold"
          margin={null}
          mobileFontFamily="primary"
          numberOfLines={null}
          text="lbl_bonusPoints_placeRewardsDay"
          textDecoration={null}
        />
      </ForwardRef>
    }
    height={null}
    iconLocator="arrowicon"
    index={null}
  />
</View>
`;

exports[`BonusPointsAvailabilityVanilla should render correctly with future Use 1`] = `
<View>
  <CollapsibleContainer
    arrowPos={null}
    body={
      <ForwardRef
        spacingStyles="padding-top-SM"
      >
        <React.Fragment>
          <ForwardRef>
            <ForwardRef
              accessibilityText=""
              data-locator="msgtextinbold"
              dataLocator=""
              fontSize="fs14"
              fontWeight="extrabold"
              margin={null}
              mobileFontFamily="secondary"
              numberOfLines={null}
              text="lbl_bonusPoints_applyAnyDay"
              textAlign="center"
              textDecoration={null}
            />
          </ForwardRef>
          <ForwardRef>
            <ForwardRef
              accessibilityText=""
              data-locator="infomsg"
              dataLocator=""
              fontSize="fs12"
              fontWeight="regular"
              margin={null}
              mobileFontFamily="secondary"
              numberOfLines={null}
              text="lbl_bonusPoints_msg"
              textAlign="center"
              textDecoration={null}
            />
          </ForwardRef>
        </React.Fragment>
        <BonusPointsAvailability
          bonusDayAvailableToday={0}
          bonusPoints={
            Array [
              Object {
                "buttonText": "lbl_bonusPoints_usedOn ",
                "dataLocator": "usedonbtn",
                "disabled": true,
              },
              Object {
                "buttonText": "lbl_bonusPoints_ctaApply",
                "dataLocator": "availabletodaybtn",
                "disabled": false,
              },
              Object {
                "buttonText": "lbl_bonusPoints_futureUse",
                "dataLocator": "availableforfutureusebtn",
                "disabled": true,
              },
            ]
          }
          className="availability-msg"
          enableApplyCta={false}
          getBonusDaysData={[Function]}
          isPlcc={false}
          labels={
            Object {
              "placeRewards": Object {
                "lbl_bonus_points_apply_any_day": "",
                "lbl_bonus_points_msg": "",
                "lbl_common_details": "",
                "lbl_place_rewards_bonus": "",
                "lbl_place_rewards_day": "",
                "lbl_place_rewards_points": "",
              },
            }
          }
          orderDetails={Object {}}
        />
        <ForwardRef
          accessibilityLabel=""
          anchorVariation="primary"
          className="details-link"
          colorName={null}
          customStyle={Object {}}
          dataLocator="detailslink"
          fontSizeVariation="medium"
          href="#"
          locator=""
          onPress={[Function]}
          text="lbl_bonusPoints_details"
          underline={true}
          visible={false}
        />
      </ForwardRef>
    }
    defaultOpen={false}
    getExpandedState={null}
    header={
      <ForwardRef
        className="elem-mb-SM"
        data-locator="bonuspointsdayhdr"
      >
        <ForwardRef>
          <ForwardRef
            accessibilityText=""
            color="orange.800"
            component="span"
            dataLocator=""
            fontSize="fs16"
            fontWeight="extrabold"
            margin={null}
            mobileFontFamily="primary"
            numberOfLines={null}
            text="lbl_bonusPoints_placeRewardsBonus"
            textDecoration={null}
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            accessibilityText=""
            color="primary.main"
            component="span"
            dataLocator=""
            fontSize="fs16"
            fontWeight="extrabold"
            margin={null}
            mobileFontFamily="primary"
            numberOfLines={null}
            text="lbl_bonusPoints_placeRewardsPoints"
            textDecoration={null}
          />
        </ForwardRef>
        <ForwardRef
          accessibilityText=""
          color="pink.500"
          component="span"
          dataLocator=""
          fontSize="fs16"
          fontWeight="extrabold"
          margin={null}
          mobileFontFamily="primary"
          numberOfLines={null}
          text="lbl_bonusPoints_placeRewardsDay"
          textDecoration={null}
        />
      </ForwardRef>
    }
    height={null}
    iconLocator="arrowicon"
    index={null}
  />
</View>
`;

exports[`BonusPointsAvailabilityVanilla should render correctly with futureDisabled 1`] = `
<View>
  <CollapsibleContainer
    arrowPos={null}
    body={
      <ForwardRef
        spacingStyles="padding-top-SM"
      >
        <React.Fragment>
          <ForwardRef>
            <ForwardRef
              accessibilityText=""
              data-locator="msgtextinbold"
              dataLocator=""
              fontSize="fs14"
              fontWeight="extrabold"
              margin={null}
              mobileFontFamily="secondary"
              numberOfLines={null}
              text="lbl_bonusPoints_applyAnyDay"
              textAlign="center"
              textDecoration={null}
            />
          </ForwardRef>
          <ForwardRef>
            <ForwardRef
              accessibilityText=""
              data-locator="infomsg"
              dataLocator=""
              fontSize="fs12"
              fontWeight="regular"
              margin={null}
              mobileFontFamily="secondary"
              numberOfLines={null}
              text="lbl_bonusPoints_msg"
              textAlign="center"
              textDecoration={null}
            />
          </ForwardRef>
        </React.Fragment>
        <BonusPointsAvailability
          bonusDayAvailableToday={0}
          bonusPoints={
            Array [
              Object {
                "buttonText": "lbl_bonusPoints_usedOn 15/7",
                "dataLocator": "usedonbtn",
                "disabled": true,
              },
              Object {
                "buttonText": "lbl_bonusPoints_ctaApply",
                "dataLocator": "availabletodaybtn",
                "disabled": false,
              },
              Object {
                "buttonText": "lbl_bonusPoints_futureUse",
                "dataLocator": "availableforfutureusebtn",
                "disabled": true,
              },
            ]
          }
          className="availability-msg"
          enableApplyCta={false}
          getBonusDaysData={[Function]}
          isPlcc={false}
          labels={
            Object {
              "placeRewards": Object {
                "lbl_bonus_points_apply_any_day": "",
                "lbl_bonus_points_msg": "",
                "lbl_common_details": "",
                "lbl_place_rewards_bonus": "",
                "lbl_place_rewards_day": "",
                "lbl_place_rewards_points": "",
              },
            }
          }
          orderDetails={Object {}}
        />
        <ForwardRef
          accessibilityLabel=""
          anchorVariation="primary"
          className="details-link"
          colorName={null}
          customStyle={Object {}}
          dataLocator="detailslink"
          fontSizeVariation="medium"
          href="#"
          locator=""
          onPress={[Function]}
          text="lbl_bonusPoints_details"
          underline={true}
          visible={false}
        />
      </ForwardRef>
    }
    defaultOpen={false}
    getExpandedState={null}
    header={
      <ForwardRef
        className="elem-mb-SM"
        data-locator="bonuspointsdayhdr"
      >
        <ForwardRef>
          <ForwardRef
            accessibilityText=""
            color="orange.800"
            component="span"
            dataLocator=""
            fontSize="fs16"
            fontWeight="extrabold"
            margin={null}
            mobileFontFamily="primary"
            numberOfLines={null}
            text="lbl_bonusPoints_placeRewardsBonus"
            textDecoration={null}
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            accessibilityText=""
            color="primary.main"
            component="span"
            dataLocator=""
            fontSize="fs16"
            fontWeight="extrabold"
            margin={null}
            mobileFontFamily="primary"
            numberOfLines={null}
            text="lbl_bonusPoints_placeRewardsPoints"
            textDecoration={null}
          />
        </ForwardRef>
        <ForwardRef
          accessibilityText=""
          color="pink.500"
          component="span"
          dataLocator=""
          fontSize="fs16"
          fontWeight="extrabold"
          margin={null}
          mobileFontFamily="primary"
          numberOfLines={null}
          text="lbl_bonusPoints_placeRewardsDay"
          textDecoration={null}
        />
      </ForwardRef>
    }
    height={null}
    iconLocator="arrowicon"
    index={null}
  />
</View>
`;

exports[`BonusPointsAvailabilityVanilla should render correctly with isUsed 1`] = `
<View>
  <CollapsibleContainer
    arrowPos={null}
    body={
      <ForwardRef
        spacingStyles="padding-top-SM"
      >
        <ForwardRef>
          <ForwardRef
            accessibilityText=""
            data-locator="infomsg"
            dataLocator=""
            fontSize="fs12"
            fontWeight="regular"
            margin={null}
            mobileFontFamily="secondary"
            numberOfLines={null}
            text="lbl_bonusPoints_myRewardsUsedAll"
            textAlign="center"
            textDecoration={null}
          />
        </ForwardRef>
        <BonusPointsAvailability
          bonusDayAvailableToday={0}
          bonusPoints={
            Array [
              Object {
                "buttonText": "lbl_bonusPoints_usedOn ",
                "dataLocator": "usedonbtn",
                "disabled": true,
              },
            ]
          }
          className="availability-msg"
          enableApplyCta={false}
          getBonusDaysData={[Function]}
          isPlcc={false}
          labels={
            Object {
              "placeRewards": Object {
                "lbl_bonus_points_apply_any_day": "",
                "lbl_bonus_points_msg": "",
                "lbl_common_details": "",
                "lbl_place_rewards_bonus": "",
                "lbl_place_rewards_day": "",
                "lbl_place_rewards_points": "",
              },
            }
          }
          orderDetails={Object {}}
        />
        <ForwardRef
          accessibilityLabel=""
          anchorVariation="primary"
          className="details-link"
          colorName={null}
          customStyle={Object {}}
          dataLocator="detailslink"
          fontSizeVariation="medium"
          href="#"
          locator=""
          onPress={[Function]}
          text="lbl_bonusPoints_details"
          underline={true}
          visible={false}
        />
      </ForwardRef>
    }
    defaultOpen={false}
    getExpandedState={null}
    header={
      <ForwardRef
        className="elem-mb-SM"
        data-locator="bonuspointsdayhdr"
      >
        <ForwardRef>
          <ForwardRef
            accessibilityText=""
            color="orange.800"
            component="span"
            dataLocator=""
            fontSize="fs16"
            fontWeight="extrabold"
            margin={null}
            mobileFontFamily="primary"
            numberOfLines={null}
            text="lbl_bonusPoints_placeRewardsBonus"
            textDecoration={null}
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            accessibilityText=""
            color="primary.main"
            component="span"
            dataLocator=""
            fontSize="fs16"
            fontWeight="extrabold"
            margin={null}
            mobileFontFamily="primary"
            numberOfLines={null}
            text="lbl_bonusPoints_placeRewardsPoints"
            textDecoration={null}
          />
        </ForwardRef>
        <ForwardRef
          accessibilityText=""
          color="pink.500"
          component="span"
          dataLocator=""
          fontSize="fs16"
          fontWeight="extrabold"
          margin={null}
          mobileFontFamily="primary"
          numberOfLines={null}
          text="lbl_bonusPoints_placeRewardsDay"
          textDecoration={null}
        />
      </ForwardRef>
    }
    height={null}
    iconLocator="arrowicon"
    index={null}
  />
</View>
`;
